# LitNexus

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TUTORIAL.md  config.example.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: backlog.md  index.md  requirements.txt  roadmap.md
docs/architecture/: database.md  overview.md  pipeline.md  platforms.md  workspace.md
docs/guide/: manual-review.md  page-help.md  quickstart.md  workspace.md
docs/product/: overview.md  scope.md
mac/: .gitignore  Package.swift  make_app.sh
mac/Sources/LitNexus/: LitNexusApp.swift
mac/Sources/LitNexus/Engine/: AIClient.swift  ArticleIO.swift  CSV.swift  CSVTest.swift  ConfigStore.swift  Database.swift  EPMCClient.swift  HTTP.swift  MigrateTool.swift  Models.swift  Pipeline.swift  Reporter.swift  SelfTest.swift  SelfTestAI.swift  (+3 more)
python/: README.md  TUTORIAL.md
python/tests/: test_ai.py  test_engine.py  test_epmc.py  test_run.py  test_translator.py  test_workspace.py
scripts/: 1_download_epmc_journals.py  1_download_epmc_keywords_1.py  1_download_epmc_keywords_2.py  2_merge_to_db.py  3_translate_articles.py  4_export_from_db.py  5_ask.py  6_update_db_from_csv.py  SQLite.txt  journals.txt  keywords_1.txt  keywords_2.txt
src/litnexus/cli/: app.py  cmd_ask.py  cmd_db.py  cmd_download.py  cmd_export.py  cmd_import.py  cmd_merge.py  cmd_sync.py  cmd_translate.py
src/litnexus/core/: classifier.py  config.py  db.py  epmc.py  fields.py  io.py  pipeline.py  translator.py
src/litnexus/gui/: app.py
tests/: conftest.py  test_engine.py  test_pipeline.py
tools/: migrate_personal_db.py
win/: Directory.Build.props  Directory.Build.targets  INSTALL-Windows.txt  LitNexus.sln  README.md  build.ps1
win/src/LitNexus.Core/: LitNexus.Core.csproj
win/src/LitNexus.Desktop/: App.xaml  App.xaml.cs  LitNexus.Desktop.csproj  MainWindow.xaml  MainWindow.xaml.cs  WorkspaceChooserWindow.xaml  WorkspaceChooserWindow.xaml.cs
win/tests/LitNexus.SelfTest/: LitNexus.SelfTest.csproj  Program.cs
windows/: README.md
(+79 files in other folders)
