[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litnexus"
version = "0.1.0"
description = "Literature discovery pipeline: EPMC download → SQLite → AI analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "requests>=2.32",
    "openai>=1.30",
    "tqdm>=4.66",
    "pandas>=2.2",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyinstaller>=6.6",
]

[project.scripts]
litnexus = "litnexus.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/litnexus"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
