[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litnexus"
version = "0.1.0"
description = "Literature discovery pipeline: EPMC download → SQLite → AI analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "tomli-w>=1.0",
    "platformdirs>=4",
    "requests>=2.32",
    "openai>=1.30",
    "tqdm>=4.66",
    "pandas>=2.2",
    "pydantic>=2.7",
    "nicegui>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyinstaller>=6.6",
]
# 原生桌面窗口（litnexus gui --native）。打包二进制时一并包含。
desktop = [
    "pywebview>=5",
]

[project.scripts]
litnexus = "litnexus.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/litnexus"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# 内置长 prompt 模板 / 中文 UI 标签，豁免行长限制
"src/litnexus/core/config.py" = ["E501"]
"src/litnexus/gui/app.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
